test/src/e2e_vm_tests/test_programs/should_pass/language/generic_traits/src/my_double.sw
library;

pub trait MyDouble<T> {
    fn my_double(self, input: T) -> T;
}
