test/src/e2e_vm_tests/test_programs/should_fail/traits_with_symbol_paths/src/my_add.sw
library;

pub trait MyAdd {
    fn my_add(self, other: Self) -> Self;
}
